[package]
name = "jsonpath_rust_bindings"
version = "1.1.0"
edition = "2021"

[lib]
name = "jsonpath_rust_bindings"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
debug = true

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
jsonpath-rust = "1.0.4"
serde_json = "1.0"
pythonize = "0.26.0"

[target.'cfg(any(not(target_os = "linux"),all(target_os = "linux", target_env = "musl")))'.dependencies]
mimalloc = "0.1.48"

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.i686-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.i686-unknown-linux-musl]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.aarch64-unknown-linux-musl]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "linker=rust-lld"]

[target.i686-pc-windows-msvc]
rustflags = ["-C", "linker=rust-lld"]
